LFA/Projeto/geometrics-lfa-07-master/examples/geometrics_tests/semantic_errors/semantic_error_remove.geom
geometrics: main

/* Should fail -> token recognition error at: '?'; extraneous input '2' expecting NEWLINE */
remove r1
r1 = -x * 4 ? 2 